--- a/app/src/main/res/layout/activity_display_about.xml
+++ b/app/src/main/res/layout/activity_display_about.xml
@@ -46,5 +46,19 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:text="Zurück"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button"
+                android:layout_weight="1"
+                android:onClick="goBack" />
+        </LinearLayout>
+
     </LinearLayout>
 </RelativeLayout>
